# Ri

./: .gitignore  1  ANNOUNCEMENT.md  ANNOUNCEMENT.zh.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  build.rs  cbindgen.toml  fix_jni_files.py  pyproject.toml  simple_fix.py  test_oqs.rs
.cargo/: config.toml
.github/workflows/: build-wheels.yml  docs.yml  rust.yml
benches/: auth.rs  cache.rs  core.rs  gateway.rs  grpc.rs  protocol.rs  queue.rs
cli/: Cargo.toml  README.md  README.zh.md
cli/docs/: commands.md  configuration.md  examples.md  templates.md
cli/src/: cli.rs  cli_config.rs  commands.rs  error.rs  lib.rs  main.rs  template.rs
cli/src/config/: mod.rs  parser.rs  schema.rs  validator.rs
cli/src/config_validation/: mod.rs  validator.rs
cli/src/generator/: dependency.rs  engine.rs  mod.rs  templates.rs
cli/src/templates/: api.rs  embedded.rs  engine.rs  microservice.rs  minimal.rs  mod.rs  web.rs  worker.rs
cli/src/utils/: fs.rs  mod.rs  output.rs  template.rs  validation.rs
cli/templates/api/: .gitignore.tmpl  Cargo.toml.tmpl  README.md.tmpl
cli/templates/api/config/: development.yaml.tmpl  production.yaml.tmpl
cli/templates/api/src/: main.rs.tera
cli/templates/microservice/: .gitignore.tmpl  Cargo.toml.tera  README.md.tera
cli/templates/microservice/config/: development.yaml.tera  production.yaml.tmpl
cli/templates/microservice/src/: main.rs.tera
cli/templates/minimal/: .gitignore.tera  Cargo.toml.tera  Cargo.toml.tmpl  README.md.tmpl
cli/templates/minimal/config/: config.yaml.tera  config.yaml.tmpl
cli/templates/minimal/src/: main.rs.tmpl
cli/templates/web/: .gitignore.tera  Cargo.toml.tera  README.md.tera
cli/templates/web/config/: development.yaml.tera  production.yaml.tera
cli/templates/web/src/: main.rs.tmpl
cli/templates/worker/: .gitignore.tera  Cargo.toml.tmpl  README.md.tmpl
cli/templates/worker/config/: development.yaml.tera  production.yaml.tera
cli/templates/worker/src/: main.rs.tmpl
doc/: 01-introduction.md  02-getting-started.md  03-core-concepts.md  06-best-practices.md  07-troubleshooting.md  08-glossary.md  index.md
doc/04-api-reference/: README.md  auth.md  cache.md  config.md  core.md  database.md  http.md  log.md  mq.md  observability.md  security.md  storage.md  validation.md
doc/05-usage-examples/: README.md  authentication.md  basic-app.md  caching.md  database.md  http.md  mq.md  observability.md  security.md  storage.md  validation.md
doc/en/: 01-introduction.md  02-getting-started.md  03-core-concepts.md  06-best-practices.md  07-troubleshooting.md  08-glossary.md  index.md
doc/zh/: 01-introduction.md  02-getting-started.md  03-core-concepts.md  06-best-practices.md  07-troubleshooting.md  08-glossary.md  index.md
examples/: config.yaml  runtime_demo.rs  smoke.rs
examples/C/: auth_example.c  cache_example.c  comprehensive_example.c
examples/Cpp/: comprehensive_example.cpp
examples/Java/: AuthExample.java  CacheExample.java  ComprehensiveExample.java  GatewayExample.java
examples/Python/: auth.py  cache.py  comprehensive_example.py  database.py  device.py  gateway.py  grpc.py  observability.py  protocol.py  queue.py  service_mesh.py
examples/Rust/: auth.rs  cache.rs  database.rs  device.rs  gateway.rs  observability.rs  queue.rs  service_mesh.rs
java/: CHANGELOG.md  README.md  README.zh.md  pom.xml
python/: CHANGELOG.md  README.md  README.zh.md  pyproject.toml  setup.py
python/dms_core/: __init__.py
python/dmsc/: __init__.py
python/doc/en/: 01-introduction.md  02-getting-started.md  03-core-concepts.md  06-best-practices.md  07-troubleshooting.md  08-glossary.md  index.md
python/doc/en/04-api-reference/: README.md  auth.md  cache.md  config.md  core.md  device.md  fs.md  gateway.md  hooks.md  log.md  mq.md  observability.md  protocol.md  service_mesh.md
python/doc/en/05-usage-examples/: README.md  authentication.md  basic-app.md  caching.md  device.md  fs.md  gateway.md  hooks.md  mq.md  observability.md  protocol.md  service_mesh.md
python/doc/zh/: 01-introduction.md  02-getting-started.md  03-core-concepts.md  06-best-practices.md  07-troubleshooting.md  08-glossary.md  index.md
python/doc/zh/04-api-reference/: README.md  auth.md  cache.md  config.md  core.md  database.md  device.md  fs.md  gateway.md  hooks.md  http.md  log.md  mq.md  observability.md  protocol.md  security.md  service_mesh.md  storage.md  validation.md
python/doc/zh/05-usage-examples/: README.md  authentication.md  basic-app.md  caching.md  database.md  device.md  fs.md  gateway.md  hooks.md  http.md  mq.md  observability.md  protocol.md  security.md  service_mesh.md  storage.md  validation.md
python/ri/: __init__.py
src/: lib.rs
src/auth/: jwt.rs  mod.rs  oauth.rs  permissions.rs  revocation.rs  security.rs  session.rs
src/c/: auth.rs  cache.rs  core.rs  database.rs  device.rs  fs.rs  gateway.rs  grpc.rs  hooks.rs  log.rs  macros.rs  mod.rs  module_rpc.rs  observability.rs  protocol.rs  queue.rs  service_mesh.rs  validation.rs  ws.rs
src/cache/: cache.rs  config.rs  core.rs  manager.rs  mod.rs
src/config/: mod.rs
src/core/: analytics.rs  app_builder.rs  app_runtime.rs  concurrent.rs  context.rs  error.rs  error_chain.rs  health.rs  lifecycle.rs  lock.rs  mod.rs  module.rs  module_sorter.rs  module_types.rs  runtime.rs
src/database/: config.rs  migration.rs  mod.rs  mysql.rs  pool.rs  postgres.rs  result.rs  row.rs  sqlite.rs  statement.rs  transaction.rs
src/device/: controller.rs  core.rs  device.rs  discovery_scheduler.rs  mod.rs  pool.rs  scheduler.rs
src/fs/: mod.rs
src/gateway/: circuit_breaker.rs  load_balancer.rs  middleware.rs  mod.rs  server.rs  (+3 more)
test/: Cargo.toml
test_crate/: Cargo.toml
tests/: cache.rs  config.rs  config.yaml  core.rs  device.rs  device_discovery_scheduler.rs  fs.rs  gateway.rs  hooks.rs  log.rs  observability_grafana.rs  observability_metrics_collector.rs  observability_prometheus.rs  observability_propagation.rs  queue.rs  service_mesh.rs
tmp_test/: Cargo.toml
(+423 files in other folders)
